--- a/css/contato.css
+++ b/css/contato.css
@@ -6,6 +6,14 @@ body, h1, h2, p, ul, li {
 	background-color: #f5a9a9; /* Cor de fundo rosa */
 
 }
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+	font-family:  'Snell Roundhand', cursive;
+    text-decoration: none;
+    font-size: 62.5%;
+}
 
 /* Estilização do cabeçalho */
 header {
@@ -13,7 +21,6 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color:  #f5a9a9; /* Cor de fundo rosa */
-
     padding: 10px;
 }
 
@@ -25,7 +32,8 @@ header {
 nav ul {
     list-style: none;
     display: flex;
-	margin-left: -355%;
+    font-size:2000%;
+	margin-left: -290%;
 }
 
 nav li {
@@ -44,17 +52,6 @@ h2{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1000%;
 }
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-decoration: none;
-    font-size: 62.5%;
-}
-body {
-    background-color: black;
-}
 main {
     height: 100vh;
     display: flex;
@@ -63,7 +60,8 @@ main {
 }
 form {
     width: 400px;
-    background-color: rgb(159, 74, 255);
+    background-color: rgba(217, 0, 255, 0.506);
+    margin-top: -30%;
     padding: 10px;
     border-radius: 10px;
     display: flex;
